# proj-pymice_web

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  readme.md
docs/: diferenciais.md
docs/superpowers/plans/: 2026-05-15-experiment-recording-status.md  2026-05-15-experiment-recording.md  2026-06-15-python-run-orchestrator.md
docs/superpowers/specs/: 2026-05-11-velocity-outlier-filter-design.md  2026-05-15-experiment-recording-design.md  2026-06-15-python-run-orchestrator-design.md
pymice/: .gitignore  run.bat  run.py  run.sh  setup_backend.sh
pymice-panel/: pyproject.toml  video_compactado.json  video_funcional.json
pymice-panel/src/pymicetracking_panel/: __init__.py  app.py
pymice-panel/src/pymicetracking_panel/ethological_tab/: ethological_tab.py  heatmap_analysis.py
pymice-panel/src/pymicetracking_panel/tracking_tab/: export_json.py  tracking_tab.py
pymice-panel/src/pymicetracking_panel/tracking_tab/experiment_types/: README.md  example_epm.json  example_open_field.json  teste1.json
pymice-panel/tests/: lstm.py  reader_json.py  segmentation.py  video_codec.py  video_duration.py
pymice-react/: .gitignore  DOCKER_README.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUN_HELP.md  SETUP_UV.md  docker-compose.gpu.yml  docker-compose.yml  docker.bat  docker.sh  run.bat  run.py  run.sh  setup_backend.sh  uv-env
pymice-react/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  pyproject.toml  requirements.txt
pymice-react/backend/app/: __init__.py  main.py
pymice-react/backend/app/models/: schemas.py
pymice-react/backend/app/processing/: tracking.py
pymice-react/backend/app/routers/: analysis.py  tracking.py  video.py
pymice-react/backend/test/: mice_jumping.ipynb  mice_jumping.py  mice_jumping_pose.py  mice_jumping_seg.py  testing_mask.py
pymice-react/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
pymice-react/frontend/src/: App-test.tsx  App.tsx
pymice-react/frontend/src/components/: AnimatedMouse.tsx  MouseIcon.tsx
pymice-react/frontend/src/pages/: CameraTab.tsx  EthologicalTab.tsx  ExtraToolsTab.tsx  IRLTab.tsx  SyntheticTab.tsx  TrackingTab.tsx  VisualizarResultadosTab.tsx
pymice-react/frontend/src/services/: api.ts
pymice-react/frontend/src/types/: index.ts
pymice-react/frontend/src/utils/: canvas.ts
pymice-react/logs/: backend.pid  frontend.pid
pymice/backend/: .env.example  .gitignore  pyproject.toml  test_outlier_filter.py
pymice/backend/app/: __init__.py  main.py
pymice/backend/app/models/: schemas.py
pymice/backend/app/processing/: __init__.py  detection.py  live_experiment.py  segment_writer.py  tracking.py  trigger_evaluator.py
pymice/backend/app/routers/: analysis.py  camera.py  experiment.py  roi.py  system.py  tracking.py
pymice/backend/app/services/: event_bus.py  integrations.py
pymice/backend/app/utils/: device.py
pymice/backend/tests/: conftest.py  test_device.py  test_event_bus.py  test_integration_http.py  test_integration_serial.py  test_live_experiment_loop.py  test_segment_writer.py  test_trigger_evaluator.py
pymice/frontend/: nginx.conf  vite.config.ts
pymice/frontend/src/: App.tsx  index.css
pymice/frontend/src/components/: EventLogPanel.tsx  FolderPickerModal.tsx  IntegrationsPanel.tsx  ROICanvas.tsx  ThemeToggle.tsx  TriggersPanel.tsx
pymice/frontend/src/hooks/: useTheme.ts
pymice/frontend/src/pages/: CameraTab.tsx  EthologicalTab.tsx  ExperimentRecordingTab.tsx  ExtraToolsTab.tsx  IRLTab.tsx  SyntheticTab.tsx  TrackingTab.tsx  VisualizarResultadosTab.tsx
pymice/frontend/src/services/: api.ts
pymice/frontend/src/types/: index.ts
pymice/frontend/src/utils/: canvas.ts
pymice/tests/: conftest.py  test_run.py
src/pymicetracking_panel/: app.py
src/pymicetracking_panel/camera_tab/: camera_tab.py
src/pymicetracking_panel/ethological_tab/: ethological_tab.py  open_field.py
src/pymicetracking_panel/extra_tools_tab/: extra_tools_tab.py
src/pymicetracking_panel/tracking_tab/: tracking_tab.py
tests/: mice_mass.py  mice_speed.py  read_json_centers.py  reader_json.py  rois_data_example.json  rois_data_example_1_circle.json  segmentation.py
