[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymicetracking-panel"
version = "0.1.0"
description = "Mice tracking application with Panel interface and YOLO-based computer vision"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mouse-tracking", "computer-vision", "yolo", "panel", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core YOLO packages
    "ultralytics>=8.0.0",
    # PyTorch ecosystem - let PyTorch handle CUDA dependencies automatically
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Computer vision essentials
    "opencv-python>=4.5.0",
    "pillow>=9.0.0",
    "imageio>=2.20.0",
    "imageio-ffmpeg>=0.4.0",
    # Machine learning core
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    # Deep learning utilities
    "timm>=0.6.0",
    "safetensors>=0.3.0",
    "huggingface-hub>=0.15.0",
    # Utilities
    "tqdm>=4.60.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    # Panel/Bokeh web interface
    "panel>=1.0.0",
    "bokeh>=3.0.0",
    # Video processing
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
# GPU support - let PyTorch automatically handle CUDA dependencies
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
# Computer vision models
yolo = [
    "ultralytics>=8.0.0",
]
# Visualization and analysis
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "panel>=1.0.0",
    "bokeh>=3.0.0",
]
dev = [
    "pre-commit>=3.7.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

# Removed private repository index - using PyPI only

[project.scripts]
pymicetracking = "pymicetracking_panel.app:main"

[project.urls]
Homepage = "https://github.com/heltonmaia/proj-pymicetracking-panel"
Repository = "https://github.com/heltonmaia/proj-pymicetracking-panel.git"
Issues = "https://github.com/heltonmaia/proj-pymicetracking-panel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pymicetracking_panel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pymicetracking_panel"]
known_third_party = ["panel", "numpy", "opencv-python", "ultralytics", "torch", "matplotlib", "scipy", "bokeh", "PIL"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist", "build", ".venv"]
