[project]
name = "pymice-web-backend"
version = "1.0.0"
description = "Backend API for PyMice Web Application"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",
    "opencv-python>=4.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "Pillow>=9.0.0",
    "imageio>=2.20.0",
    "imageio-ffmpeg>=0.4.0",
    "PyYAML>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.3",
    "pyserial>=3.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
gpu = [
    # cu128 wheels (CUDA 12.8) — required for Blackwell / RTX 50-series (sm_120).
    # The matching cu128 builds live on the PyTorch index, so from pymice/backend/:
    #   uv pip install -e '.[gpu]' \
    #       --index-url https://download.pytorch.org/whl/cu128 \
    #       --extra-index-url https://pypi.org/simple --index-strategy unsafe-best-match
    # Older GPUs work with the default PyPI wheels (drop the index flags).
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
]
yolo = [
    "ultralytics>=8.3.102",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
sam3 = [
    # Runtime deps for the optional SAM3 video model dropped into temp/models/sam3/
    # (the SAM3 package itself is a manual drop-in, not on PyPI). SAM3's
    # model_builder imports pkg_resources, which only ships with setuptools<81 —
    # do not unpin or the import silently fails (SAM3_AVAILABLE=False).
    "setuptools<81",
    "huggingface_hub",
    "iopath",
    "einops",
    "timm",
    "decord",
    "pycocotools",
    "ftfy",
    "regex",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
